# plotly-dash-example

./: .gitignore  README.rst  pyproject.toml
plotly_dash_example/: drop_down.py  main.py
tests/: test_plotly_dash_example.py
