[tool.poetry]
name = "plotly-dash-example"
version = "0.1.0"
description = ""
authors = ["ish <ismael.veyna@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dash = "^2.0.0"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
